--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -8,7 +8,7 @@
     height: 200px;
     display: flex;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     justify-content: center;
 
     bottom: 0;
