--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -9,7 +9,7 @@
 
 .container{
     background-color: rgb( 49, 87, 156);
-    width: 100vw;
+    width: 100%;
     padding: 10px 0;
     display: flex;
     justify-content: space-between;
